# openapi.yaml
@@ -315,9 +315,9 @@ components:
                 priority:
                     type: string
                     enum:
-                        - low
-                        - medium
-                        - high
+                        - LOW
+                        - MEDIUM
+                        - HIGH
                 createdAt:
                     type: string
                     format: date-time
@@ -337,9 +337,9 @@ components:
                 priority:
                     type: string
                     enum:
-                        - low
-                        - medium
-                        - high
+                        - LOW
+                        - MEDIUM
+                        - HIGH
 
         BacklogType:
             type: string
